--- a/powerdns/slave.conf
+++ b/powerdns/slave.conf
@@ -1,16 +1,13 @@
 local-address=0.0.0.0
 launch=gsqlite3
 gsqlite3-database=/etc/pdns/run/sqlite3/powerdns.sqlite3
-master=yes
-slave=no
+master=no
+slave=yes
 daemon=no
 guardian
 #chroot=/etc/pdns/run
 module-dir=/usr/lib/pdns/pdns
 recursor=no
-webserver-port=80
-webserver=yes
-webserver-address=0.0.0.0
+webserver=no
 gsqlite3-database=/etc/pdns/run/sqlite3/zone_db.sqlite
-api
 socket-dir=/
