--- a/powerdns/pdns.conf
+++ b/powerdns/pdns.conf
@@ -1,7 +1,7 @@
 local-address=0.0.0.0
-launch=gsqlite3
-gsqlite3-database=/etc/pdns/run/sqlite3/powerdns.sqlite3
-master=yes
+#launch=gsqlite3
+#gsqlite3-database=/etc/pdns/run/sqlite3/powerdns.sqlite3
+#master=yes
 slave=no
 daemon=no
 guardian
@@ -11,6 +11,11 @@ recursor=no
 webserver-port=80
 webserver=yes
 webserver-address=0.0.0.0
-gsqlite3-database=/etc/pdns/run/sqlite3/zone_db.sqlite
+#gsqlite3-database=/etc/pdns/run/sqlite3/zone_db.sqlite
 api
 socket-dir=/
+launch=ldap
+ldap-host=ldap://ldap/
+ldap-binddn=cn=admin,dc=ldap,dc=noflag,dc=io
+ldap-secret=752684859ad4093449c8b7265345e557
+ldap-basedn=ou=domains,dc=ldap,dc=noflag,dc=io
