--- a/powerdns/Dockerfile
+++ b/powerdns/Dockerfile
@@ -9,15 +9,18 @@ ADD https://gist.githubusercontent.com/djcf/bcd2f725652f46b4786e29ffdc32495c/raw
 RUN mkdir -p /etc/pdns/run/sqlite3 && \
 	touch /etc/pdns/run/sqlite3/zone_db.sqlite && \
 	sqlite3 /etc/pdns/run/sqlite3/zone_db.sqlite < /etc/pdns/create_db.sql && \
-	chown pdns:pdns /etc/pdns/run/ -R && \
 	chmod +x /usr/local/bin/minify.sh && /usr/local/bin/minify.sh
 
 COPY *.conf /etc/pdns/
 COPY start.sh /usr/local/bin/start.sh
 
-EXPOSE 53
-EXPOSE 53/udp
-EXPOSE 80
+RUN chown -R pdns:pdns /etc/pdns/
+
+EXPOSE 5353
+EXPOSE 5353/udp
+EXPOSE 8080
+
+USER pdns
 
 WORKDIR /etc/pdns
 VOLUME [ "/etc/pdns/run/sqlite3/" ]
