--- a/powerdns/pdns.conf
+++ b/powerdns/pdns.conf
@@ -5,8 +5,8 @@ guardian
 #chroot=/etc/pdns/run
 module-dir=/usr/lib/pdns/pdns
 recursor=no
-webserver-port=80
-webserver=yes
+webserver-port=8080
 webserver-address=0.0.0.0
 api
-socket-dir=/run/
+socket-dir=/etc/pdns
+local-port=5353
